fix UI, add ring tone and light-dark mode switch

--- a/SW/Src/Video Call/styles.css
+++ b/SW/Src/Video Call/styles.css
@@ -1,95 +1,181 @@
-/**
- * CSS for styling the loading spinner over the remote video stream
- */
+body {
+    font-family: 'Courier New', sans-serif;
+    margin: 0;
+    margin-left: 10px;
+    padding: 0;
+    background-color: #F5F5F5;
+    color: #555;
+}
+body.light-mode {
+    background-color: #F7F7F7;
+    color: #555;
+}
+body.light-mode #button-container {
+    border: 2px solid black;
+    background-color: #FFFFFF;
+
+}
+
+body.dark-mode #user-display-name span {
+    color: #028391;
+}
+
+body.dark-mode {
+    background-color: #11100F;
+    color: white;
+}
+
+body.dark-mode #button-container {
+    border: 2px solid #666666;
+    background-color: #3B3A39;
+
+}
+
+body.dark-mode #user-display-name span {
+    color: #FB2576;
+}
+
+.switch {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    display: inline-block;
+    width: 50px;
+    height: 25px;
+  }
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 2.5px;
+  bottom: 2.5px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #028391;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #028391;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(25px);
+  -ms-transform: translateX(25px);
+  transform: translateX(25px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    text-align: left;
+}
+
+h1 {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+}
+#user-display-name {
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+#user-display-name span {
+    font-weight: bold;
+    color: #028391;
+}
 .dropdown-container {
     display: flex;
+    justify-content: left;
     align-items: center;
-    width: 450px;
-    justify-content: space-between;
+    margin-bottom: 20px;
 }
+
+.dropdown-container label {
+    margin-right: 10px;
+    font-weight: bold;
+}
+
+.dropdown-container select {
+    width: 200px;
+    font-family: 'Courier New', sans-serif;
+}
+
 #button-container {
     position: fixed;
-    bottom: 0;
+    bottom: 10px;
     left: 0;
     right: 0;
     display: flex;
     justify-content: center;
-    gap: 15px;
+    gap: 10px;
     padding: 10px; 
-}
-#hangup-call-button {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    padding: 0;
-    border: none;
-    background-color: #e7e5e4;
-    overflow: hidden;
-}
-#hangup-call-icon {
-    width: 50px;
-    height: 50px;
+    box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    border-radius: 10px;
+    margin: auto;
 }
 
-#accept-call-button {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    padding: 0;
+button {
     border: none;
-    background-color: #e7e5e4;
-    overflow: hidden;
-}
-#accept-call-icon {
-    width: 50px;
-    height: 50px;
+    background-color: transparent;
+    cursor: pointer;
 }
 
-#start-call-button {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    padding: 0;
-    border: none;
-    background-color: #e7e5e4;
-    overflow: hidden;
-}
-#start-call-icon {
-    width: 50px;
-    height: 50px;
+button:disabled {
+    cursor: default;
 }
 
-#toggle-video-button {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    padding: 0;
-    border: none;
-    background-color: #e7e5e4;
-    overflow: hidden;
-}
-#toggle-video-icon {
-    width: 50px;
-    height: 50px;
+button img {
+    width: 40px;
+    height: 40px;
 }
 
-#toggle-micro-button {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    padding: 0;
-    border: none;
-    background-color: #e7e5e4;
-    overflow: hidden;
-}
-#toggle-micro-icon {
-    width: 50px;
-    height: 50px;
+#connectedLabel {
+    color: #13bb13;
+    text-align: center;
+    margin-top: 20px;
+    font-weight: bold;
+    z-index: 1;
 }
 
 .remote-video-container {
     position: relative;
 }
+
 .loading-spinner {
     border: 12px solid #f3f3f3;
     border-radius: 50%;
@@ -106,30 +192,24 @@
     right: 0;
     transform: translate(-50%, -50%);
 }
+
 #remoteVideosGallery {
     margin: auto;
     width: 70%;
 }
+
 #localVideoContainer {
     position: absolute;
     width: 14%;
     right: 5px;
     bottom: 0;
 }
-#remoteVideosGallery *,
-#localVideoContainer * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-}
-body {
-    overflow: hidden;
-}
+
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
 /* Safari */
 @-webkit-keyframes spin {
     0% { -webkit-transform: rotate(0deg); }
